--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
+[package]
+name = "porno-extractor"
+version = "0.1.0"
+edition = "2021"
+
 [workspace]
 members = ["crates/*"]
 resolver = "2"
@@ -13,3 +18,8 @@ anyhow = "1.0.75"
 chrono = "0.4.31"
 scraper = "0.18.1"
 regex = "1.10.2"
+
+
+[dependencies]
+xvideos-extractor = { path = "./crates/xvideos-extractor" }
+# xvideos-extractor = {path = "./crates/xvideos-extractor"}
