--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ serde = { version = "1.0.193", features = ["derive"] }
 extractor-core = { path = "./crates/extractor-core" }
 serde_json = "1.0.108"
 anyhow = "1.0.75"
-chrono = "0.4.31"
+chrono = "0.4"
 scraper = "0.18.1"
 regex = "1.10.2"
-
+serde_with = { version = "3.4.0", features = ["chrono_0_4"] }
 
 [dependencies]
 xvideos-extractor = { path = "./crates/xvideos-extractor" }
