Implement enum_dispatch logic for extractors

--- a/crates/extractor-core/Cargo.toml
+++ b/crates/extractor-core/Cargo.toml
@@ -13,3 +13,4 @@ scraper.workspace = true
 serde.workspace = true
 serde_with.workspace = true
 enum_dispatch.workspace = true
+# enum_dispatch.workspace = true
