--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,14 @@ chrono = "0.4"
 scraper = "0.18.1"
 regex = "1.10.2"
 serde_with = { version = "3.4.0", features = ["chrono_0_4"] }
-enum_dispatch = "0.3.12"
+enum_dispatch = { git = "https://gitlab.com/antonok/enum_dispatch.git" }
+# enum_delegate = { git = "https://gitlab.com/dawn_app/enum_delegate.git" }
 
 [dependencies]
 xvideos-extractor = { path = "./crates/xvideos-extractor" }
 extractor-core = { path = "./crates/extractor-core" }
 pornhub-extractor = { path = "./crates/pornhub-extractor" }
 enum_dispatch.workspace = true
+
+# enum_delegate.workspace = true
 # xvideos-extractor = {path = "./crates/xvideos-extractor"}
