Implement enum_dispatch logic for extractors

--- a/crates/extractor-core/Cargo.toml
+++ b/crates/extractor-core/Cargo.toml
@@ -12,5 +12,5 @@ chrono.workspace = true
 scraper.workspace = true
 serde.workspace = true
 serde_with.workspace = true
+enum_delegate.workspace = true
 enum_dispatch.workspace = true
-# enum_dispatch.workspace = true
